--- a/linux/SConscript
+++ b/linux/SConscript
@@ -19,6 +19,7 @@ gui_files = [
 	'settingsdialog.cc',
 	'settingsmanager.cc',
 	'sharebrowser.cc',
+	'sound.cc',
 	'transfers.cc',
 	'treeview.cc',
 	'UserCommandMenu.cc',
@@ -34,6 +35,7 @@ Import('env')
 # We don't want to add these CFLAGS globally so we copy the env
 env = env.Clone()
 env.ParseConfig('pkg-config --cflags libglade-2.0')
+env.ParseConfig('pkg-config --cflags libgnome-2.0')
 
 # Build the gui_files
 obj_files = env.Object(gui_files)
