--- a/linux/SConscript
+++ b/linux/SConscript
@@ -11,6 +11,7 @@ gui_files = [
 	'emoticonsdialog.cc',
 	'entry.cc',
 	'favoritehubs.cc',
+	'favoriteusers.cc',
 	'finishedtransfers.cc',
 	'hashdialog.cc',
 	'hub.cc',
