--- a/dcpp/SConscript
+++ b/dcpp/SConscript
@@ -56,6 +56,8 @@ dcpp_files = [
 	'UserConnection.cpp',
 	'User.cpp',
 	'Util.cpp',
+	'UPnP.cpp',
+	'UPnPManager.cpp',
 	'version.cpp',
 	'WindowInfo.cpp',
 	'WindowManager.cpp',
