--- a/linux/SConscript
+++ b/linux/SConscript
@@ -28,6 +28,7 @@ gui_files = [
 	'sound.cc',
 	'transfers.cc',
 	'treeview.cc',
+	'upnpc.cc',
 	'UserCommandMenu.cc',
 	'wulfor.cc',
 	'wulformanager.cc',
